tests/rosetta/out/Fortran/angle-difference-between-two-bearings-1.error
gfortran: exit status 1
/tmp/angle-difference-between-two-bearings-1.f90:8:132:

    8 |   testCases = reshape((/20.0,45.0,(0 - 45.0),45.0,(0 - 85.0),90.0,(0 - 95.0),90.0,(0 - 45.0),125.0,(0 - 45.0),145.0,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
      |                                                                                                                                    1
Error: Line truncated at (1) [-Werror=line-truncation]
/tmp/angle-difference-between-two-bearings-1.f90:8:132:

    8 |   testCases = reshape((/20.0,45.0,(0 - 45.0),45.0,(0 - 85.0),90.0,(0 - 95.0),90.0,(0 - 45.0),125.0,(0 - 45.0),145.0,29.4803,(0 - 88.6381),(0 - 78.3251),(0 - 159.036)/),(/8,2/))
      |                                                                                                                                    1
Error: Expected a right parenthesis in expression at (1)
/tmp/angle-difference-between-two-bearings-1.f90:11:26:

   11 |     print *, angleDiff(tc(((0)+1)),tc(((1)+1)))
      |                          1
Error: Syntax error in argument list at (1)
/tmp/angle-difference-between-two-bearings-1.f90:19:9:

   19 |     if (((d < 0) - 180.0)) then
      |         1
Error: Operands of binary numeric operator ‘-’ at (1) are LOGICAL(4)/REAL(4)
/tmp/angle-difference-between-two-bearings-1.f90:10:18:

   10 |     tc = testCases(i0)
      |                  1
Error: Rank mismatch in array reference at (1) (1/2)
/tmp/angle-difference-between-two-bearings-1.f90:10:19:

    9 |   do i0 = 1, size(testCases)
      |                            2
   10 |     tc = testCases(i0)
      |                   1
Warning: Array reference at (1) out of bounds (16 > 8) in loop beginning at (2)
f951: some warnings being treated as errors
